tests/fixtures/invalid/pow_bytes_bytes_none.py
# Cannot call pow() with Bytes, Bytes, None
x = pow(b"hello", b"hello", None)
